--- a/package.json
+++ b/package.json
@@ -2,22 +2,30 @@
     "name": "postauthors",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://shopen101.github.io/test-work-rocks",
     "dependencies": {
+        "@material-ui/core": "^4.11.3",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
+        "gh-pages": "^3.1.0",
         "node-sass": "4.14.1",
+        "notistack": "^1.0.6",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
+        "redux": "^4.1.0",
         "web-vitals": "^1.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "deploy": "gh-pages -d build",
+        "predeploy": "yarn build"
     },
     "eslintConfig": {
         "extends": [
